# TgAnimeBot

./: .env  Dockerfile  README.md  alembic.ini  docker-compose.yaml  env_dist  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 528303b91729_add_user_data_table.py
core/: config.py  message_texts.py
core/db/: database.py  models.py
core/handlers/: basic.py  core.py
core/handlers/utils/: utils.py
core/keyboards/: inline.py  reply.py
core/middlewares/: db_middleware.py
core/utils/: callback_data.py  commands.py  db.py  states.py
